--- a/styles/cave_style.css
+++ b/styles/cave_style.css
@@ -31,75 +31,679 @@ body {
 	-webkit-mask: radial-gradient(circle, rgba(0, 0, 0, 0) 32px, rgba(0, 0, 0, 1) 38px);*/
 }
 
+
+
 .one {
 	grid-area: one;
-	width: 100%;
+	/*width: 100%;*/
 	position: relative;
 	text-align: center;
-    height: 450px;
+    height: 200px;
 	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
+	align-items: center;
 /*  	align-items: center;*/
 	background: url(graphics/Frames/Gold_2_Dark.png); 
 	background-size: 80%;
 	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.one:hover {
+	cursor: pointer;
+	grid-area: one;
+	/*width: 100%;*/
+	position: relative;
+	text-align: center;
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
+	align-items: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/Gold_2_Dark.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 .two {
 	grid-area: two;
-	width: 100%;
+	/*width: 100%;*/
 	position: relative;
 	text-align: center;
-    height: 450px;
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
+	align-items: center;
 	justify-content: center;
 /*  	align-items: center;*/
 	background: url(graphics/Frames/Gold_2_Dark.png); 
 	background-size: 80%;
 	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.two:hover {
+	cursor: pointer;
+	grid-area: two;
+	/*width: 100%;*/
+	position: relative;
+	text-align: center;
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
+	align-items: center;
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/Gold_2_Dark.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 .three {
 	grid-area: three;
-	width: 100%;
+	/*width: 100%;*/
 	position: relative;
 	text-align: center;
-    height: 450px;
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
 	justify-content: center;
 /*  	align-items: center;*/
 	background: url(graphics/Frames/Gold_2_Dark.png); 
 	background-size: 80%;
 	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.three:hover {
+	cursor: pointer;
+	grid-area: three;
+	/*width: 100%;*/
+	position: relative;
+	text-align: center;
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/Gold_2_Dark.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 .four {
 	grid-area: four;
-	width: 100%;
+	/*width: 100%;*/
 	position: relative;
 	text-align: center;
-    height: 450px;
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
 	justify-content: center;
 /*  	align-items: center;*/
 	background: url(graphics/Frames/Gold_2_Dark.png); 
 	background-size: 80%;
 	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.four:hover {
+	cursor: pointer;
+	grid-area: four;
+	/*width: 100%;*/
+	position: relative;
+	text-align: center;
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/Gold_2_Dark.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 .five {
 	grid-area: five;
-	width: 100%;
+	/*width: 100%;*/
 	position: relative;
 	text-align: center;
-    height: 450px; 
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
 	justify-content: center;
 /*  	align-items: center;*/
 	background: url(graphics/Frames/Gold_2_Dark.png); 
 	background-size: 80%;
 	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.five:hover {
+	cursor: pointer;
+	grid-area: five;
+	/*width: 100%;*/
+	position: relative;
+	text-align: center;
+    height: 200px;
+	justify-content: center;
+	margin-top: 70%;
+	margin-bottom: 70%;
+	padding: 20%; 
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/Gold_2_Dark.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 /*.item{
 	width: 100vw;
 	height: 200vh;
 }*/
 
+.One {
+	grid-area: one;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 200px;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.One:hover {
+	cursor: pointer;
+	grid-area: one;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 200px;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.Two {
+	grid-area: one;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 200px;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.Two:hover {
+	cursor: pointer;
+	grid-area: one;
+	width: 100%;
+	/*height: 100%;*/
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    height: 200px;
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.Three {
+	grid-area: one;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 200px;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.Three:hover {
+	cursor: pointer;
+	grid-area: one;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 200px;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.Four {
+	grid-area: one;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 200px;*/
+	justify-content: center;
+	/*padding: 100%;*/
+  	align-items: center;
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.Four:hover {
+	cursor: pointer;
+	grid-area: one;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 200px;*/
+	justify-content: center;
+	/*padding: 100%;*/
+  	align-items: center;
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.Five {
+	/*grid-area: one;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+.Five:hover {
+	cursor: pointer;
+	/*grid-area: one;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: -1;
+}
+
+#buttonOne {
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+	outline: none;
+}
+
+#buttonOne:hover {
+	cursor: pointer;
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+}
+
+#buttonTwo {
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+	outline: none;
+}
+
+#buttonTwo:hover {
+	cursor: pointer;
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+}
+
+#buttonThree {
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+	outline: none;
+}
+
+#buttonThree:hover {
+	cursor: pointer;
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+}
+
+#buttonFour {
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+	outline: none;
+}
+
+#buttonFour:hover {
+	cursor: pointer;
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+}
+
+#buttonFive {
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+	outline: none;
+}
+
+#buttonFive:hover {
+	cursor: pointer;
+	/*display: none;*/
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	text-align: center;
+    /*height: 100%;*/
+	justify-content: center;
+/*  	align-items: center;*/
+	background: transparent;
+	border: none; 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 1;
+}
+
+
+.modal {
+	display: none; /* Hidden by default */
+ 	position: fixed; /* Stay in place */
+  	z-index: 1; /* Sit on top */
+  	left: 0;
+  	top: 0;
+  	width: 100%; /* Full width */
+  	height: 100%; /* Full height */
+  	overflow: auto; /* Enable scroll if needed */
+  	background-color: rgb(0,0,0);
+  	background-color: rgba(0,0,0,0.4); 
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 0.5s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+.modal-content {
+	position: relative;
+	display: grid;
+	grid-template-columns: 1.7fr 1.2fr 0.1fr;
+    grid-template-rows: 1fr;
+	grid-template-areas:
+	  "Left Middle Right";
+	flex-wrap: nowrap;
+	background-color: hsla(192, 15%, 95%, 0.5);
+  	margin: 10% auto; /* 15% from the top and centered */
+  	padding: 5px;
+/*  	border: 1px solid #888;*/
+  	width: 80%; 
+  	height: 80%;
+}
+
+.close {
+	grid-area: Right;
+	width: 10%;
+	color: #aaa;
+  	float: right;
+  	font-size: 28px;
+  	font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.pic {
+	grid-area: Left;
+	padding: 5%;
+	height: 100%;
+	width: 100%;
+	/*flex: 0 0 auto;*/
+	background: url(graphics/Frames/image_placeholder.png); 
+/*	top: 0;
+	left: 0;*/
+/*	align-self: center;
+	position: absolute;*/
+	/*text-align: center;*/
+    /*height: 100%;*/
+	/*justify-content: center;*/
+  	align-items: center;
+	background: url(graphics/Frames/image_placeholder.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: top left;
+	/*background-position: center;*/
+}
+
+.description {
+/*	background-color: #fefefe;*/
+	grid-area: Middle;
+	width: 45%;
+	color: white;
+	width: 100%
+}
+
+div > p {
+	display: inline-block;
+}
 
 
 
