--- a/styles/index_style.css
+++ b/styles/index_style.css
@@ -1,4 +1,4 @@
-/*
+
 body {
 	background-image: url(graphics/index_plain_background.png);
 	background-position: center center;
@@ -10,14 +10,31 @@ body {
 	padding: 0px;
 	width: 100%;
 	position: absolute;
+	min-height: 400px;
+}
+
+/*html {
+  height: 100%;
+}
+
+body {
+	min-height: 100%;
 }*/
 
-html { 
-  background: url(graphics/index_plain_background.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+
+img { 
+  background-image: url(graphics/index_plain_background.png) no-repeat center center fixed; 
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  -webkit-object-fit: cover;
+  -moz-object-fit: cover;
+  -o-object-fit-size: cover;
+  object-fit: cover;
+  /*overflow: auto;*/
+  /*height: 100%;*/
+  min-height: 100%;
+  min-width: 400px;
 }
 
 
@@ -27,11 +44,17 @@ html {
     right: 100px;
     bottom: 0;
     left: 0;
-    background-image: url(graphics/All-Layers-Fountain-Overlay-highlights.gif);
+    background-image: url(graphics/210616-FRAMES-FOUNTAIN.gif);
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: 500px;
-	min-width: 200px;
+	/*background-size: 500px;*/
+	height: 100%;
+	width: 100%;
+	min-height: 400px;
+	min-width: 400px;
+	background-size: 50vh;
+	/*min-width: 200px;*/
+
 }
 
 
