--- a/styles/gallery_hang_style.css
+++ b/styles/gallery_hang_style.css
@@ -4,18 +4,25 @@ body {
 
 #hang-room-sky {
 	min-height: 100vh;
+	background-color: #1b0e1a; /* Eyedropped from background */
 	background-image: url('graphics/hang-room/hang_room_sky.jpg');
-	background-size: 100% auto;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 #hang-room-staircase {
 	min-height: 313.3vw; /* Aspect ratio of image * 100 */
+	background-color: #209784; /* Eyedropped from background */
 	background-image: url('graphics/hang-room/hang_room_staircase.jpg');
 	background-size: 100% auto;
+	background-repeat: no-repeat;
 }
 
 #hang-room-floor {
 	min-height: 100vh;
+	background-color: #2eb281; /* You guessed it, eyedropped from background */
 	background-image: url('graphics/hang-room/hang_room_floor.jpg');
-	background-size: 100% auto;
+	background-size: cover;
+	background-position: bottom center;
+	background-repeat: no-repeat;
 }
