--- a/shared/menu/menu.css
+++ b/shared/menu/menu.css
@@ -2,4 +2,17 @@
     position: fixed;
     right: 0;
     top: 0;
+    background: white;
+    z-index: 1;
+}
+
+#menu.open {
+    width: 90%;
+    height: 90%;
+    left: 5%;
+    top: 5%;
+}
+
+#menu.open ~ * {
+    filter: blur(3px);
 }
