--- a/shared/menu/menu.css
+++ b/shared/menu/menu.css
@@ -9,9 +9,27 @@
 }
 
 #menu #open-menu-button {
-    position: absolute;
+    position: fixed;
     right: 0;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
+
+/* 
+ * Utility class to hide content visually while keeping it screen reader-accessible.
+ * Source: https://www.scottohara.me/blog/2017/04/14/inclusively-hidden.html 
+ */
+
+ .visually-hidden:not(:focus):not(:active) {
+    clip: rect(0 0 0 0); 
+    clip-path: inset(100%); 
+    height: 1px; 
+    overflow: hidden; 
+    position: absolute; 
+    white-space: nowrap; 
+    width: 1px; 
+  }
 
 #menu.closed #open-menu-button ~ * {
     display: none;
@@ -20,8 +38,8 @@
 #menu.open {
     width: 90%;
     height: 90%;
-    left: 5%;
-    top: 5%;
+    /* left: 5%;
+    top: 5%; */
 }
 
 #menu.open ~ * {
@@ -45,3 +63,4 @@
 #menu a:hover {
     text-decoration: underline;
 }
+
