--- a/tapestry/tapestry_style.css
+++ b/tapestry/tapestry_style.css
@@ -1,20 +1,25 @@
 
 body {
 	margin-top: 0;	
+	scroll-behavior: smooth;
 
 }
 
+
+
+
 .slide {
-	width: 100vw;
+	width: 3000vw;
 	height: 100vh;
 	justify-content: center;
   	align-items: center;
   	position: relative;
 	display: flex;
-	/*min-width: 100%;*/
+	min-width: 2500px;
 }
 
-.outer-wrapper {
+#outer-wrapper {
+	position: absolute;
 	width: 100vh;
 	height: 100vw;
 	transform: rotate(-90deg) translateX(-100vh);
@@ -24,15 +29,18 @@ body {
 	position: absolute;
 	scrollbar-width: none;
 	-ms-overflow-style: none;
-	min-height: 1000px;
+	scroll-behavior: smooth;
+	/*min-height: 1000px;*/
 
 }
 
-.wrapper {
+#wrapper {
+	position: absolute;
 	background-color: rgb(255, 204, 153);
 	display: flex;
 	flex-direction: row;
-	width: 400vw;
+	width: 110vw;
+	min-width: 12500px; /* This property dictates length of full tapestry */
 	transform: rotate(90deg) translateY(-100vh);
 	transform-origin: top left;
 }
@@ -40,6 +48,10 @@ body {
 /*	text-align: center;*/
 
 }
+
+
+/*Artboard 1*/
+
 
 #ab1_entrance { 
 	position: absolute;
@@ -54,6 +66,8 @@ body {
 	left: 50px;
 }	
 
+
+
 #ab1_medium_frame { 
 	position: absolute;
 	width: 500px;
@@ -64,9 +78,14 @@ body {
 	background-size: 90%;
 	background-repeat: no-repeat;
 	background-position: center;
+	left: 1500px;
 }
 
-#ab2_medium_rectangle_vertical_frame { 
+
+/*Artboard 2*/
+
+
+#ab2_medium_rectangle_vertical_frame_1 { 
 	position: absolute;
 	width: 480px;
     height: 450px;
@@ -89,11 +108,222 @@ body {
 	background-size: 50%;
 	background-repeat: no-repeat;
 	background-position: center;
-	left: 490px;
+	left: 590px;
+}
+
+#ab2_medium_frame {
+	position: absolute;
+	width: 500px;
+    height: 650px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/medium_rectangle_frame.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 1000px;
+}
+
+#ab2_split_frame_2 {
+	position: absolute;
+	width: 400px;
+    height: 550px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/split_frame_1.png); 
+	background-size: 50%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 1510px;
+}
+
+#ab2_medium_rectangle_vertical_frame_2 { 
+	position: absolute;
+	width: 480px;
+    height: 450px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/medium_rectangle_vertical_frame.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 2020px;
 }
 
 
+/*Artboard 3*/
 
+
+#ab3_birds { 
+	position: absolute;
+	width: 480px;
+    height: 450px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/birds.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 500px;
+}
+
+#ab3_large_frame { 
+	position: absolute;
+	width: 680px;
+    height: 650px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/large_frame.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 1500px;
+}
+
+
+/*Artboard 4*/
+
+
+#ab4_medium_square_frame { 
+	position: absolute;
+	width: 440px;
+    height: 410px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/medium_square_frame_2.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 100px;
+}
+
+#ab4_medium_rectangle_frame_1 { 
+	position: absolute;
+	width: 530px;
+    height: 480px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/medium_rectangle_frame_2.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 600px;
+}
+
+#ab4_storage_cupboard {
+	position: absolute;
+	width: 180px;
+    height: 180px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/storage_cupboard.png); 
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 1600px;
+}
+
+#ab4_medium_rectangle_frame_2{
+	position: absolute;
+	width: 530px;
+    height: 480px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/medium_rectangle_frame_2.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 2300px;
+}
+
+
+/*Artboard 5*/
+
+
+#ab5_medium_square_frame { 
+	position: absolute;
+	width: 440px;
+    height: 410px;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/medium_square_frame_2.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 500px;
+}
+
+
+#ab5_button_elements {
+	position: absolute;
+	/*text-align: center;*/
+/*	justify-content: center;
+  	align-items: center;*/
+	height: 400px;
+	min-width: 550px;
+	left: 75%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#ab5_reverse_big_star { 
+	position: absolute;
+	width: 180px;
+    height: 180px;
+    display: inline-block;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/reverse_big_star.png); 
+	background-size: 90%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 100px;
+	top: 100px;
+}
+
+#ab5_back_to_top {
+	cursor: pointer;
+	position: absolute;
+	width: 220px;
+    height: 100px;
+    display: inline-block;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/back_to_top.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 270px;
+	top: 190px;
+}
+
+#ab5_next_room {
+	position: absolute;
+	width: 220px;
+    height: 100px;
+    display: inline-block;
+	justify-content: center;
+  	align-items: center;
+	background: url(/tapestry/graphics/next_room.png); 
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	left: 380px;
+	top: 100px;
+}
+
+#next {
+	cursor: pointer;
+	width: 220px;
+    height: 100px;
+    position: absolute;
+    display: inline-block;
+	justify-content: center;
+  	align-items: center;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+}
 
 
 /*.next_room { 
