--- a/reflections/reflection_style3.css
+++ b/reflections/reflection_style3.css
@@ -13,7 +13,7 @@ body {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 100%;
+	height: 100vh;
 	margin: 0px;
 	object-fit: cover;
 	padding: 0px;
@@ -27,7 +27,7 @@ body {
     "one two three four"; 
     min-width: 1250px;
     min-height: 710px;
-    max-height: 1500px;
+    /*max-height: 1500px;*/
 }
 .container {
 	position: relative;
@@ -42,47 +42,41 @@ body {
 
 .frame {
 	position: absolute;
-    height: 400px;
+    /*height: 400px;*/
     bottom: 40px;
+    height: 40vh;
+    width: 20vw;
 	background-repeat: no-repeat;
 	background-position: center;
+	background-size: 80%;
 }
 
 #frame1 {
 	background-image: url('reflection/r3_frame1_left.png');
-	top: 390px;
+	/*top: 390px;*/
+	bottom: 40px;
 	left: 10px;
-    background-size: 100%;
-    width: 240px;
-    height: 290px;
-
 }
 
 #frame4 {
 	background-image: url('reflection/r3_frame1_right.png');
-	top: 390px;
+	/*top: 390px;*/
+	bottom: 40px;
 	right: 10px;
-    background-size: 100%;
-	width: 240px;
-	height: 290px;
 }
 
 #frame2 {
 	background-image: url('reflection/r3_frame2_left.png');
-	top: 420px;
+	/*top: 420px;*/
+	bottom: 40px;
 	right: 40px;
-    background-size: 100%;
-    width: 260px;
-    height: 300px;
 }
 
 #frame3 {
 	background-image: url('reflection/r3_frame2_right.png');
-	top: 420px;
+	/*top: 420px;*/
+	bottom: 40px;
 	left: 40px;
-    background-size: 100%;
-    width: 260px;
-	height: 300px;
 }
 
 #previous {
