--- a/gallery-hang/gallery_hang_style.css
+++ b/gallery-hang/gallery_hang_style.css
@@ -25,27 +25,43 @@ body {
 	overflow: hidden;
 }
 
-#hang-room-sky {
+#hang-room-sky, #hang-room-sky-overlay {
 	min-height: 100vh;
 	background-color: #56a0c7;
 	background-image: url('graphics/plain_sky_placeholder.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
+}
+
+#hang-room-sky {
 	transition: background-image 1s ease; /* Doesn't work in Firefox, but, whatever */
 
 	position: relative;
 }
 
-#hang-room-sky.background-wash {
+#hang-room-sky-overlay {
+	z-index: 1;
+	opacity: 0;
+	transition: opacity 1s ease;
+	pointer-events: none;
+	position: relative;
+}
+
+#hang-room-sky-overlay.visible {
+	opacity: 1;
+	pointer-events: all;
+}
+
+#hang-room-sky.background-wash, #hang-room-sky-overlay.background-wash {
 	/* Default, see above */
 }
 
-#hang-room-sky.background-clouds {
+#hang-room-sky.background-clouds, #hang-room-sky-overlay.background-clouds {
 	background-color: #b2e3ff;
 	background-image: url('graphics/5-collage-animation.gif');
 }
 
-#hang-room-sky.background-stars {
+#hang-room-sky.background-stars, #hang-room-sky-overlay.background-stars {
 	background-color: #1b0e1a; /* Eyedropped from background */
 	background-image: url('graphics/starry_night.jpg');
 }
@@ -112,6 +128,7 @@ button {
 
 .artwork-container {
 	position: absolute;
+	transition: transform 1s ease;
 }
 
 .artwork-frame {
