--- a/styles/common.css
+++ b/styles/common.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
 
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 a.ig-link {
