--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -16,14 +16,14 @@
 }
 
 .homepage-button {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     place-self: center;
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url(graphics/button2.png);
-	background-size: 150px 150px;
+	background-size: 120px 120px;
 	background-repeat: no-repeat;
 	background-position: center;
     text-align: center;
@@ -32,8 +32,8 @@
 
 a.homepage-button {
     color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.2rem;
-    font-weight: 500;
     text-decoration: none;
 }
 
